org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-05-27
	- Unifying interface; menuBar set-up depending on interface type; new controller PortalController
	  to improve MVC design 
	
2009-05-26
	- DisclosurePanels used for metadata and components in synopsis of ontology
	- ViewTable with column sorting capability
	
2009-05-25
	- Different types of ontology data are now handled, see ViewDataPanel:
		Vocabulary: for each class in the ontology, a table of corresponding datatype properties is shown.
		Mapping: not dispatched yet
		"Other": a synopsis of the classes, properties, and individuals is shown.
	
2009-05-24
	- Per update in iserver module, ontology browse list now shows only the latest versions;
	  each entry contains the prior versions of the ontology, but these are not shown yet.
	  
	  Note that unversioned URIs should be shown in general for the UI in the read-only mode;
	  For editing, it should show versioned URIs.
	   

2009-05-23
	- Moved most of metadata management to iserver ontmd module.
	- Integrated retrieval of metadata and data: operation getOntologyContents
	Basic functionality in place. Note that all contents are retrieved in a single call;
	TODO: implement a paging mechanism.
	
	Next: display data in appropriate format according to "type" of ontology; we basically
	have the following cases: vocabulary (a la voc2rdf), mapping (a la vine), and the others.
	I'm planning on using the omv:usedOntologyEngineeringTool property to explicitly
	assign it to ontologies created by voc2rdf and vine (I just created the related resources
	in the Omv and OmvMmi vocabularies (see ont module).
	
	
2009-05-22
	- Author subtree now includes all usernames (if user is logged)
	
	- DataPanel now using the iserver-based getEntities operation
	
	
2009-05-18
	- OntMdServiceImpl: fixed a recently introduced bug in getOntologyInfoFromRegistry:
		prepareOntologyInfo was not called in the "new mechanism"
		